added the ability to logout and an admin convenience page

--- a/cellcompdirector/templates/play.html
+++ b/cellcompdirector/templates/play.html
@@ -30,3 +30,5 @@
   <input type="submit" name="rating" value="4">
   <input type="submit" name="rating" value="5">
 </form>
+
+<a href="{%url 'cellcomp:logout'%}">logout</a>
