--- a/cellcompdirector/templates/registration/login.html
+++ b/cellcompdirector/templates/registration/login.html
@@ -25,5 +25,5 @@
 </table>
 
 <input type="submit" value="login" />
-<input type="hidden" name="next" value="{% url 'cellcomp:play' %}" />
+<input type="hidden" name="next" value="{% url 'cellcomp:supercheck' %}" />
 </form>
