added url paramaterized dump functionality

--- a/cellcompdirector/templates/adminfunctions.html
+++ b/cellcompdirector/templates/adminfunctions.html
@@ -1,4 +1,5 @@
 <a href = "{%url 'cellcomp:play'%}">test cellcomp</a> <br>
 <a href = "{%url 'admin:login' %}">admin page</a> <br>
-<a href = "{%url 'cellcomp:dump'%}">data dump</a> <br>
+<a href = "{%url 'cellcomp:dump' 'accumulatedMean' %}">data dump</a> <br>
+<a href = "{%url 'cellcomp:dump' 'raw' %}">data dump raw</a> <br>
 <a href="{%url 'cellcomp:logout'%}">logout</a>
