revised cell selection method, added user session start page stored session time

--- a/cellcompdirector/templates/adminfunctions.html
+++ b/cellcompdirector/templates/adminfunctions.html
@@ -1,4 +1,4 @@
-<a href = "{%url 'cellcomp:play'%}">test cellcomp</a> <br>
+<a href = "{%url 'cellcomp:newsession'%}">test cellcomp</a> <br>
 <a href = "{%url 'admin:login' %}">admin page</a> <br>
 <a href = "{%url 'cellcomp:dump' 'accumulatedMean' %}">data dump</a> <br>
 <a href = "{%url 'cellcomp:dump' 'raw' %}">data dump raw</a> <br>
