--- a/cellcompdirector/templates/play.html
+++ b/cellcompdirector/templates/play.html
@@ -95,7 +95,7 @@
 			window.onload = function () {
 				var leftobj = "{{leftcell}}",
 					rightobj = "{{rightcell}}";
-			    init(leftobj, rightobj);
+			    init(leftobj,rightobj);
           /*var c = new CountDownTimer({{timeleft}},1000);
           c.onTick(changeElement)
           c.start();*/
@@ -104,7 +104,7 @@
 
     </script>
 		<div id="footer">
-			<form action="{% url 'cellcomp:rate' %}" method="post" > {% csrf_token %}
+			<!--form action="{% url 'cellcomp:rate' %}" method="post" > {% csrf_token %}
 				<div id="radio">
 					<input type="radio" id="radio1" name="radio"><label for="radio1">1</label>
 			  	<input type="radio" id="radio2" name="radio"><label for="radio2">2</label>
@@ -113,7 +113,17 @@
 					<input type="radio" id="radio5" name="radio"><label for="radio5">5</label>
 				</div id="radio">
 				<input type="submit" id="confirm" value="Confirm Selection">
-			</form>
+			</form-->
+      <form action="{% url 'cellcomp:rate' %}" method="post" > {% csrf_token %}
+        <input type="submit" name="rating" value="1">
+        <input type="submit" name="rating" value="2">
+        <input type="submit" name="rating" value="3">
+        <input type="submit" name="rating" value="4">
+        <input type="submit" name="rating" value="5">
+      </form>
       <a href="{%url 'cellcomp:logout'%}">logout</a>
 		</div>
 	</body>
+
+
+  
