changing session start again

--- a/cellcompdirector/templates/adminfunctions.html
+++ b/cellcompdirector/templates/adminfunctions.html
@@ -32,7 +32,7 @@
 							</header>
 							<section>
 								<ul class="actions">
-									<center><li><a href="{%url 'cellcomp:newsession'%}" class="button special">Tet Cell Compare</a></li></center>
+									<center><li><a href="{%url 'cellcomp:newsession'%}" class="button special">Test Cell Compare</a></li></center>
 									<p> </p>
 									<center><li><a href="{%url 'admin:login' %}" class="button special">Admin Page</a></li></center>
 									<p> </p>
