--- a/cellcompdirector/templates/home.html
+++ b/cellcompdirector/templates/home.html
@@ -10,7 +10,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">WVU-SNRC</a></h1>
+					<h1 id="logo"><a href={% url 'cellcomp:home' %}>WVU-SNRC</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Contact</a></li>
